Initial commit with my local files

--- a/4_training_models/training_models.ipynb
+++ b/4_training_models/training_models.ipynb
@@ -3362,6 +3362,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2 cases -> \n",
+    "\n",
+    "1. if y = 1 , then Loss = - log($\\hat{y}$)\n",
+    "with this we have 2 options\n",
+    "\n",
+    "$ \\hat{y}$ = 1 -> so the model was confident and got it right -> Loss = 0 \n",
+    "$ \\hat{y} $ = 0 -> so the model was confident and wrong -> loss = infinite\n",
+    "\n",
+    "2. if y = 0 , then loss = log (1-$\\hat{y}$)\n",
+    "also two options\n",
+    "\n",
+    "if $\\hat{y}$ = 0 ->  so the model was confident and right -> loss = 0\n",
+    "if $\\hat{y}$ = 1 -> so the model was confident and wrong -> loss = infinite"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
