Beginning of random forest

--- a/6_decision_trees/decision_trees.ipynb
+++ b/6_decision_trees/decision_trees.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,8 @@
     "import graphviz\n",
     "from matplotlib.colors import ListedColormap\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import train_test_split,GridSearchCV"
+    "from sklearn.model_selection import train_test_split,GridSearchCV,ShuffleSplit\n",
+    "from scipy import stats"
    ]
   },
   {
@@ -1106,6 +1107,13 @@
     "graph = graphviz.Source(dot_reg)\n",
     "graph.format = 'png'\n",
     "graph.render ('regressor')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Moon dataset tree"
    ]
   },
   {
@@ -2526,10 +2534,101 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Grow a forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of subsets: 1000\n",
+      "Size of first subset: (100, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate 1000 subsets of training set \n",
+    "# Each having 100 instances of selected randomly (100 random indices)\n",
+    "ss= ShuffleSplit(n_splits = 1000, train_size = 100,test_size =None,random_state=42)\n",
+    "\n",
+    "subset_x=[]\n",
+    "subset_y=[]\n",
+    "\n",
+    "\n",
+    "# Split goes to Train index and Test index , _ -> Test\n",
+    "\n",
+    "for train_index, _ in ss.split(X_train):\n",
+    "    X_subset = X_train[train_index]\n",
+    "    y_subset= y_train[train_index]\n",
+    "    subset_x.append(X_subset)\n",
+    "    subset_y.append(y_subset)\n",
+    "    \n",
+    "\n",
+    "# Number of subsets\n",
+    "print(f\"Number of subsets: {len(subset_x)}\")\n",
+    "print(f'Size of first subset: {subset_x[0].shape}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## train one decision tree on each subset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average accuracy will be 0.790141\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List of scores for the 1000 trees\n",
+    "scores = []\n",
+    "\n",
+    "# Train the 1000 trees\n",
+    "best_max_leaf_nodes = grid_search.best_params_['max_leaf_nodes']\n",
+    "\n",
+    "for X_sub,y_sub in zip(subset_x,subset_y):\n",
+    "    little_tree = DecisionTreeClassifier(max_leaf_nodes=best_max_leaf_nodes, random_state=42)\n",
+    "    little_tree.fit(X_sub,y_sub)           # first train the tree\n",
+    "    score=little_tree.score(X_test,y_test) # Test on our test set\n",
+    "    scores.append(score)\n",
+    "    \n",
+    "    \n",
+    "# Average accuracy for 1000 tree\n",
+    "\n",
+    "print(f\"The average accuracy will be {sum(scores)/len(scores)}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For each test set , generate predictions of 1000 decision trees !!! . then keep only most freq preditions \n",
+    "\n",
+    "this gives me majority vote predictions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
