--- a/6_decision_trees/decision_trees.ipynb
+++ b/6_decision_trees/decision_trees.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,8 @@
     "from matplotlib.colors import ListedColormap\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split,GridSearchCV,ShuffleSplit\n",
-    "from scipy import stats"
+    "from scipy import stats\n",
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
@@ -2586,7 +2587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -2604,17 +2605,30 @@
     "# Train the 1000 trees\n",
     "best_max_leaf_nodes = grid_search.best_params_['max_leaf_nodes']\n",
     "\n",
+    "# predictions\n",
+    "all_preds = []\n",
+    "\n",
     "for X_sub,y_sub in zip(subset_x,subset_y):\n",
     "    little_tree = DecisionTreeClassifier(max_leaf_nodes=best_max_leaf_nodes, random_state=42)\n",
     "    little_tree.fit(X_sub,y_sub)           # first train the tree\n",
     "    score=little_tree.score(X_test,y_test) # Test on our test set\n",
     "    scores.append(score)\n",
     "    \n",
+    "    pred = little_tree.predict(X_test)\n",
+    "    all_preds.append(pred)\n",
     "    \n",
     "# Average accuracy for 1000 tree\n",
     "\n",
-    "print(f\"The average accuracy will be {sum(scores)/len(scores)}\")\n",
+    "many_trees_result = sum(scores)/len(scores)\n",
+    "print(f\"The average accuracy will be {many_trees_result}\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### This shows how bad is EACH TREE ALONE"
    ]
   },
   {
@@ -2623,12 +2637,161 @@
    "source": [
     "## For each test set , generate predictions of 1000 decision trees !!! . then keep only most freq preditions \n",
     "\n",
-    "this gives me majority vote predictions"
+    "this gives me majority vote predictions\n",
+    "\n",
+    "so for ex . \n",
+    "\n",
+    "for each instance of X_test ,i will make 1000 predictions , one of each tree \n",
+    "\n",
+    "prediction shape = 1000 trees , 2000 test instances\n",
+    "\n",
+    "then use majority vote for each column\n",
+    "\n",
+    "test[0] takes 1000 votes and picks most freq"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Each tree trained has a low accuracy . but with the mean of all the 1000 trees it is stronger -> wisdow of crows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1000, 2000)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The shape is , for every test set(column) we will have 1000 trees trained -> Forecast\n",
+    "all_predictions = np.array(all_preds)\n",
+    "all_predictions.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "with forest we have accuracy: 0.861\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Majority vote for EVERY TEST , getting a new array 1,2000\n",
+    "\n",
+    "result = stats.mode(all_predictions, axis =0 ,keepdims=False)\n",
+    "y_pred_final =  result.mode\n",
+    "# For each COLUMN, pick the value that repeats the most\n",
+    "# Mode[0] because it returns \n",
+    "# . mode -> most freq values\n",
+    "# .count -> How many times they appeared\n",
+    "\n",
+    "# Final accuracy\n",
+    "\n",
+    "forest_accuracy = accuracy_score(y_test,y_pred_final)\n",
+    "print(f'with forest we have accuracy: {forest_accuracy}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Difference between single tree , decision tree on each subset and Forest ( on every testset )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Single Tree</td>\n",
+       "      <td>0.856000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Separated Trees (no ensemble)</td>\n",
+       "      <td>0.790141</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Forest (Ensemble)</td>\n",
+       "      <td>0.861000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           Model  Accuracy\n",
+       "0                    Single Tree  0.856000\n",
+       "1  Separated Trees (no ensemble)  0.790141\n",
+       "2              Forest (Ensemble)  0.861000"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results = {\n",
+    "    'Model': ['Single Tree', 'Separated Trees (no ensemble)', 'Forest (Ensemble)'],\n",
+    "    'Accuracy': [test_accuracy, many_trees_result, forest_accuracy]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(results)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
