--- a/8_dimensionality_red/dimension.ipynb
+++ b/8_dimensionality_red/dimension.ipynb
@@ -2,18 +2,114 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "from sklearn.decomposition import PCA"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PCA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(4)\n",
+    "m = 60\n",
+    "w1, w2 = 0.1, 0.3\n",
+    "noise = 0.1\n",
+    "\n",
+    "angles = np.random.rand(m) * 3 * np.pi / 2 - 0.5\n",
+    "X = np.empty((m, 3))\n",
+    "X[:, 0] = np.cos(angles) + np.sin(angles)/2 + noise * np.random.randn(m) / 2\n",
+    "X[:, 1] = np.sin(angles) * 0.7 + noise * np.random.randn(m) / 2\n",
+    "X[:, 2] = X[:, 0] * w1 + X[:, 1] * w2 + noise * np.random.randn(m)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Principal Components"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_centered = X - X.mean(axis=0)\n",
+    "U,s,vt = np.linalg.svd(X_centered)\n",
+    "c1 = vt.T[:,0]\n",
+    "c2 = vt.T[:,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W2 = vt.T[:,2]\n",
+    "X2D = X_centered.dot(W2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Scikit learn with PCA\n",
+    "\n",
+    "It automatically centrelizes the data !\n",
+    "\n",
+    "This code reduces the dimensions to 2! "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pca = PCA(n_components =2) \n",
+    "X2D = pca.fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
